[gd_scene load_steps=3 format=3 uid="uid://dtaed0rdlou7m"]

[ext_resource type="Script" uid="uid://bruu0wjm13gge" path="res://scripts/theme_selector/visual_theme_editor.gd" id="1_1l4km"]
[ext_resource type="PackedScene" uid="uid://bhpt4licl84vv" path="res://nodes/theme_selector/visual_theme_node.tscn" id="1_ttp0q"]

[node name="VisualThemeEditor" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1l4km")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shifter shaft fill color:"

[node name="ShifterFillColorButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ResetShifterFillColorButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "Reset"

[node name="HBoxContainer9" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shifter shaft outline color:"

[node name="ShifterOutlineColorButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer9"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="ResetShifterOutlineColorButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
text = "Reset"

[node name="HBoxContainer10" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pedal bar fill color:"

[node name="PedalBarFillColorButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer10"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
color = Color(0.082, 0.219, 0.225, 1)

[node name="ResetPedalBarFillColorButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="VisualThemeNode" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource("1_ttp0q")]
unique_name_in_owner = true
layout_mode = 2
is_theme_name_visible = false
is_button_visible = false
is_edit_colors_button_visible = false

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="color_changed" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer8/ShifterFillColorButton" to="." method="_on_shifter_fill_color_button_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer8/ResetShifterFillColorButton" to="." method="_on_reset_shifter_fill_color_button_pressed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer9/ShifterOutlineColorButton" to="." method="_on_shifter_outline_color_button_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer9/ResetShifterOutlineColorButton" to="." method="_on_reset_shifter_outline_color_button_pressed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer10/PedalBarFillColorButton" to="." method="_on_pedal_bar_fill_color_button_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/HBoxContainer10/ResetPedalBarFillColorButton" to="." method="_on_reset_pedal_bar_fill_color_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer2/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
